package app;

import app.CoffeeMachine.CoffeeMachine;

public class Main {
    public static void main(String[] args) {

        CoffeeMachine coffeeMachine = new CoffeeMachine();

        coffeeMachine.getMenu();
    }
}
