package app.drinks;

public class Cappuccino implements Drink{
    @Override
    public String prepare() {
        return "cappuccino";
    }
}
