package app.drinks;

public class Espresso implements Drink{
    @Override
    public String prepare() {
        return "espresso";
    }
}
