package app.drinks;

public class Latte implements Drink{
    @Override
    public String prepare() {
        return "latte";
    }
}
